--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,8 @@
 img{
     height:125px;
     width:200px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .sith{
     background:rgb(255, 44, 44);
@@ -14,4 +16,24 @@ img{
 }
 .btn{
     margin:2px
+}
+#special{
+    height:25px;
+    width:100%;
+    margin-left:0px
+}
+.special{
+    height:100%;
+    width:20%;
+    border:1px solid black;
+    background:grey;
+}
+
+#pmove{
+    float:left;
+    
+}
+#emove{
+    float:right;
+    margin-top:auto;
 }
